linux (Rockchip RK3399): update .config for 6.2.6

--- a/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
@@ -1,15 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.0-rc6 Kernel Configuration
+# Linux/arm64 6.2.6 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-none-elf-gcc-12.2.0 (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=120200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=23900
+CONFIG_AS_VERSION=24000
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=23900
+CONFIG_LD_VERSION=24000
 CONFIG_LLD_VERSION=0
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
@@ -56,7 +56,6 @@ CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_GENERIC_MSI_IRQ=y
-CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_MSI_IOMMU=y
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
@@ -212,6 +211,7 @@ CONFIG_INITRAMFS_PRESERVE_MTIME=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_LD_ORPHAN_WARN=y
+CONFIG_LD_ORPHAN_WARN_LEVEL="warn"
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -237,6 +237,7 @@ CONFIG_IO_URING=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
 CONFIG_KALLSYMS=y
+# CONFIG_KALLSYMS_SELFTEST is not set
 CONFIG_KALLSYMS_ALL=y
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
@@ -257,7 +258,7 @@ CONFIG_PROFILING=y
 # end of General setup
 
 CONFIG_ARM64=y
-CONFIG_GCC_SUPPORTS_DYNAMIC_FTRACE_WITH_REGS=y
+CONFIG_GCC_SUPPORTS_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_64BIT=y
 CONFIG_MMU=y
 CONFIG_ARM64_PAGE_SHIFT=12
@@ -356,6 +357,7 @@ CONFIG_ARM64_ERRATUM_1319367=y
 # CONFIG_ARM64_ERRATUM_2054223 is not set
 # CONFIG_ARM64_ERRATUM_2067961 is not set
 # CONFIG_ARM64_ERRATUM_2441009 is not set
+# CONFIG_ARM64_ERRATUM_2645198 is not set
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
@@ -474,7 +476,6 @@ CONFIG_RELOCATABLE=y
 # CONFIG_RANDOMIZE_BASE is not set
 CONFIG_CC_HAVE_STACKPROTECTOR_SYSREG=y
 CONFIG_STACKPROTECTOR_PER_TASK=y
-CONFIG_ARCH_NR_GPIO=0
 # end of Kernel Features
 
 #
@@ -600,6 +601,7 @@ CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_MMU_GATHER_TABLE_FREE=y
 CONFIG_MMU_GATHER_RCU_TABLE_FREE=y
 CONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG=y
+CONFIG_ARCH_HAS_NMI_SAFE_THIS_CPU_OPS=y
 CONFIG_HAVE_ALIGNED_STRUCT_PAGE=y
 CONFIG_HAVE_CMPXCHG_LOCAL=y
 CONFIG_HAVE_CMPXCHG_DOUBLE=y
@@ -674,6 +676,7 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
+CONFIG_FUNCTION_ALIGNMENT=0
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -1309,7 +1312,6 @@ CONFIG_NET_SCHED=y
 #
 CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_BASIC is not set
-# CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
 # CONFIG_NET_CLS_U32 is not set
@@ -1380,6 +1382,7 @@ CONFIG_BT_QCA=m
 CONFIG_BT_MTK=m
 CONFIG_BT_HCIBTUSB=m
 # CONFIG_BT_HCIBTUSB_AUTOSUSPEND is not set
+CONFIG_BT_HCIBTUSB_POLL_SYNC=y
 CONFIG_BT_HCIBTUSB_BCM=y
 # CONFIG_BT_HCIBTUSB_MTK is not set
 CONFIG_BT_HCIBTUSB_RTL=y
@@ -1399,6 +1402,7 @@ CONFIG_BT_HCIUART_QCA=y
 CONFIG_BT_HCIUART_AG6XX=y
 CONFIG_BT_HCIUART_MRVL=y
 CONFIG_BT_HCIBCM203X=m
+# CONFIG_BT_HCIBCM4377 is not set
 CONFIG_BT_HCIBPA10X=m
 CONFIG_BT_HCIBFUSB=m
 CONFIG_BT_HCIVHCI=m
@@ -1448,7 +1452,7 @@ CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 CONFIG_RFKILL=m
 CONFIG_RFKILL_LEDS=y
 CONFIG_RFKILL_INPUT=y
-CONFIG_RFKILL_GPIO=y
+CONFIG_RFKILL_GPIO=m
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -1482,7 +1486,6 @@ CONFIG_PCIEASPM_DEFAULT=y
 # CONFIG_PCIEASPM_PERFORMANCE is not set
 # CONFIG_PCIE_PTM is not set
 CONFIG_PCI_MSI=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_PCI_QUIRKS=y
 # CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_STUB is not set
@@ -2515,6 +2518,7 @@ CONFIG_MT7915E=m
 # CONFIG_MT7921E is not set
 # CONFIG_MT7921S is not set
 # CONFIG_MT7921U is not set
+# CONFIG_MT7996E is not set
 CONFIG_WLAN_VENDOR_MICROCHIP=y
 # CONFIG_WILC1000_SDIO is not set
 # CONFIG_WILC1000_SPI is not set
@@ -2774,6 +2778,7 @@ CONFIG_HW_CONSOLE=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_UNIX98_PTYS=y
 # CONFIG_LEGACY_PTYS is not set
+# CONFIG_LEGACY_TIOCSTI is not set
 CONFIG_LDISC_AUTOLOAD=y
 
 #
@@ -2855,8 +2860,6 @@ CONFIG_DEVPORT=y
 # CONFIG_TCG_TPM is not set
 # CONFIG_XILLYBUS is not set
 # CONFIG_XILLYUSB is not set
-CONFIG_RANDOM_TRUST_CPU=y
-# CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 # end of Character devices
 
 #
@@ -2921,6 +2924,7 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 # CONFIG_I2C_EMEV2 is not set
 CONFIG_I2C_GPIO=m
 # CONFIG_I2C_GPIO_FAULT_INJECTOR is not set
+# CONFIG_I2C_HISI is not set
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
@@ -2974,12 +2978,14 @@ CONFIG_SPI_GPIO=m
 # CONFIG_SPI_MICROCHIP_CORE is not set
 # CONFIG_SPI_MICROCHIP_CORE_QSPI is not set
 # CONFIG_SPI_OC_TINY is not set
+# CONFIG_SPI_PCI1XXXX is not set
 CONFIG_SPI_PL022=y
 # CONFIG_SPI_PXA2XX is not set
 CONFIG_SPI_ROCKCHIP=m
 # CONFIG_SPI_ROCKCHIP_SFC is not set
 # CONFIG_SPI_SC18IS602 is not set
 # CONFIG_SPI_SIFIVE is not set
+# CONFIG_SPI_SN_F_OSPI is not set
 # CONFIG_SPI_MXIC is not set
 # CONFIG_SPI_THUNDERX is not set
 # CONFIG_SPI_XCOMM is not set
@@ -3073,6 +3079,7 @@ CONFIG_GPIO_DWAPB=y
 # CONFIG_GPIO_FTGPIO010 is not set
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_GRGPIO is not set
+# CONFIG_GPIO_HISI is not set
 # CONFIG_GPIO_HLWD is not set
 # CONFIG_GPIO_LOGICVC is not set
 # CONFIG_GPIO_MB86S7X is not set
@@ -3134,6 +3141,7 @@ CONFIG_GPIO_MAX77620=y
 # Virtual GPIO drivers
 #
 # CONFIG_GPIO_AGGREGATOR is not set
+# CONFIG_GPIO_LATCH is not set
 # CONFIG_GPIO_MOCKUP is not set
 # CONFIG_GPIO_VIRTIO is not set
 # CONFIG_GPIO_SIM is not set
@@ -3452,6 +3460,7 @@ CONFIG_BCMA_DRIVER_PCI=y
 CONFIG_MFD_CORE=y
 # CONFIG_MFD_ACT8945A is not set
 # CONFIG_MFD_AS3711 is not set
+# CONFIG_MFD_SMPRO is not set
 # CONFIG_MFD_AS3722 is not set
 # CONFIG_PMIC_ADP5520 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
@@ -3476,7 +3485,6 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_HI6421_PMIC is not set
 # CONFIG_MFD_HI6421_SPMI is not set
 # CONFIG_HTC_PASIC3 is not set
-# CONFIG_HTC_I2CPLD is not set
 # CONFIG_LPC_ICH is not set
 # CONFIG_LPC_SCH is not set
 # CONFIG_MFD_IQS62X is not set
@@ -3535,6 +3543,7 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_TI_LP873X is not set
 # CONFIG_MFD_TI_LP87565 is not set
 # CONFIG_MFD_TPS65218 is not set
+# CONFIG_MFD_TPS65219 is not set
 # CONFIG_MFD_TPS6586X is not set
 # CONFIG_MFD_TPS65910 is not set
 # CONFIG_MFD_TPS65912_I2C is not set
@@ -3621,6 +3630,7 @@ CONFIG_REGULATOR_RK808=y
 # CONFIG_REGULATOR_RT5190A is not set
 # CONFIG_REGULATOR_RT5759 is not set
 # CONFIG_REGULATOR_RT6160 is not set
+# CONFIG_REGULATOR_RT6190 is not set
 # CONFIG_REGULATOR_RT6245 is not set
 # CONFIG_REGULATOR_RTQ2134 is not set
 # CONFIG_REGULATOR_RTMV20 is not set
@@ -3944,7 +3954,6 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 #
 # Aspeed media platform drivers
 #
-# CONFIG_VIDEO_ASPEED is not set
 
 #
 # Atmel media platform drivers
@@ -3971,6 +3980,10 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 
 #
 # Mediatek media platform drivers
+#
+
+#
+# Microchip Technology, Inc. media platform drivers
 #
 
 #
@@ -4095,12 +4108,14 @@ CONFIG_VIDEO_MT9V011=m
 # CONFIG_VIDEO_OG01A1B is not set
 # CONFIG_VIDEO_OV02A10 is not set
 # CONFIG_VIDEO_OV08D10 is not set
+# CONFIG_VIDEO_OV08X40 is not set
 # CONFIG_VIDEO_OV13858 is not set
 # CONFIG_VIDEO_OV13B10 is not set
 CONFIG_VIDEO_OV2640=m
 # CONFIG_VIDEO_OV2659 is not set
 # CONFIG_VIDEO_OV2680 is not set
 # CONFIG_VIDEO_OV2685 is not set
+# CONFIG_VIDEO_OV4689 is not set
 # CONFIG_VIDEO_OV5640 is not set
 # CONFIG_VIDEO_OV5645 is not set
 # CONFIG_VIDEO_OV5647 is not set
@@ -4124,11 +4139,11 @@ CONFIG_VIDEO_OV7640=m
 # CONFIG_VIDEO_RDACM21 is not set
 # CONFIG_VIDEO_RJ54N1 is not set
 # CONFIG_VIDEO_S5C73M3 is not set
-# CONFIG_VIDEO_S5K4ECGX is not set
 # CONFIG_VIDEO_S5K5BAF is not set
 # CONFIG_VIDEO_S5K6A3 is not set
 # CONFIG_VIDEO_S5K6AA is not set
 # CONFIG_VIDEO_SR030PC30 is not set
+# CONFIG_VIDEO_ST_VGXY61 is not set
 # CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_ET8EK8 is not set
@@ -4374,11 +4389,11 @@ CONFIG_DVB_SP2=m
 #
 # Graphics support
 #
+CONFIG_VIDEO_NOMODESET=y
 CONFIG_DRM=y
 CONFIG_DRM_MIPI_DBI=y
 CONFIG_DRM_MIPI_DSI=y
 # CONFIG_DRM_DEBUG_MM is not set
-CONFIG_DRM_USE_DYNAMIC_DEBUG=y
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -4459,6 +4474,7 @@ CONFIG_DRM_PANEL_ILITEK_ILI9341=y
 CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_PANEL_INNOLUX_EJ030NA=y
 CONFIG_DRM_PANEL_INNOLUX_P079ZCA=y
+# CONFIG_DRM_PANEL_JADARD_JD9365DA_H3 is not set
 CONFIG_DRM_PANEL_JDI_LT070ME05000=y
 CONFIG_DRM_PANEL_JDI_R63452=y
 CONFIG_DRM_PANEL_KHADAS_TS050=y
@@ -4469,6 +4485,7 @@ CONFIG_DRM_PANEL_SAMSUNG_LD9040=y
 CONFIG_DRM_PANEL_LG_LB035Q02=y
 CONFIG_DRM_PANEL_LG_LG4573=y
 CONFIG_DRM_PANEL_NEC_NL8048HL11=y
+# CONFIG_DRM_PANEL_NEWVISION_NV3051D is not set
 CONFIG_DRM_PANEL_NEWVISION_NV3052C=y
 CONFIG_DRM_PANEL_NOVATEK_NT35510=y
 CONFIG_DRM_PANEL_NOVATEK_NT35560=y
@@ -4570,8 +4587,6 @@ CONFIG_DRM_DW_MIPI_DSI=y
 # CONFIG_DRM_HISI_HIBMC is not set
 # CONFIG_DRM_HISI_KIRIN is not set
 # CONFIG_DRM_LOGICVC is not set
-# CONFIG_DRM_MXSFB is not set
-# CONFIG_DRM_IMX_LCDIF is not set
 # CONFIG_DRM_ARCPGU is not set
 # CONFIG_DRM_BOCHS is not set
 # CONFIG_DRM_CIRRUS_QEMU is not set
@@ -4595,7 +4610,6 @@ CONFIG_DRM_PANFROST=y
 # CONFIG_DRM_SSD130X is not set
 # CONFIG_DRM_LEGACY is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
-CONFIG_DRM_NOMODESET=y
 
 #
 # Frame buffer Devices
@@ -4696,6 +4710,7 @@ CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 # CONFIG_LOGO is not set
 # end of Graphics support
 
+CONFIG_DRM_ACCEL=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
@@ -5026,6 +5041,7 @@ CONFIG_SND_SOC_TS3A227E=m
 # CONFIG_SND_SOC_WM8904 is not set
 # CONFIG_SND_SOC_WM8940 is not set
 # CONFIG_SND_SOC_WM8960 is not set
+# CONFIG_SND_SOC_WM8961 is not set
 # CONFIG_SND_SOC_WM8962 is not set
 # CONFIG_SND_SOC_WM8974 is not set
 # CONFIG_SND_SOC_WM8978 is not set
@@ -5240,7 +5256,6 @@ CONFIG_USB_EHCI_PCI=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
-# CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PCI=y
@@ -5290,6 +5305,10 @@ CONFIG_USB_UAS=y
 # CONFIG_USB_MDC800 is not set
 # CONFIG_USB_MICROTEK is not set
 # CONFIG_USBIP_CORE is not set
+
+#
+# USB dual-mode controller drivers
+#
 # CONFIG_USB_CDNS_SUPPORT is not set
 CONFIG_USB_MUSB_HDRC=y
 # CONFIG_USB_MUSB_HOST is not set
@@ -5398,7 +5417,6 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 #
 # USB Peripheral Controller
 #
-# CONFIG_USB_FOTG210_UDC is not set
 # CONFIG_USB_GR_UDC is not set
 # CONFIG_USB_R8A66597 is not set
 # CONFIG_USB_PXA27X is not set
@@ -5749,7 +5767,6 @@ CONFIG_DMA_OF=y
 # CONFIG_DW_AXI_DMAC is not set
 # CONFIG_FSL_EDMA is not set
 # CONFIG_FSL_QDMA is not set
-# CONFIG_HISI_DMA is not set
 # CONFIG_INTEL_IDMA64 is not set
 # CONFIG_MV_XOR_V2 is not set
 CONFIG_PL330_DMA=y
@@ -5789,6 +5806,7 @@ CONFIG_DMABUF_HEAPS_CMA=y
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
 CONFIG_VFIO=y
+CONFIG_VFIO_CONTAINER=y
 CONFIG_VFIO_IOMMU_TYPE1=y
 # CONFIG_VFIO_NOIOMMU is not set
 CONFIG_VFIO_PCI_MMAP=y
@@ -5882,6 +5900,10 @@ CONFIG_STAGING_MEDIA=y
 # CONFIG_VIDEO_MAX96712 is not set
 CONFIG_VIDEO_ROCKCHIP_VDEC=m
 CONFIG_STAGING_MEDIA_DEPRECATED=y
+
+#
+# Atmel media platform drivers
+#
 # CONFIG_VIDEO_CPIA2 is not set
 CONFIG_VIDEO_SAA7146=m
 CONFIG_VIDEO_SAA7146_VV=m
@@ -5950,6 +5972,7 @@ CONFIG_COMMON_CLK_ROCKCHIP=y
 # CONFIG_CLK_RK3368 is not set
 CONFIG_CLK_RK3399=y
 # CONFIG_CLK_RK3568 is not set
+# CONFIG_CLK_RK3588 is not set
 # CONFIG_XILINX_VCU is not set
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 CONFIG_HWSPINLOCK=y
@@ -5997,6 +6020,7 @@ CONFIG_IOMMU_DEFAULT_DMA_STRICT=y
 # CONFIG_IOMMU_DEFAULT_PASSTHROUGH is not set
 CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
+# CONFIG_IOMMUFD is not set
 CONFIG_ROCKCHIP_IOMMU=y
 CONFIG_ARM_SMMU=y
 # CONFIG_ARM_SMMU_LEGACY_DT_BINDINGS is not set
@@ -6149,6 +6173,8 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_FXLS8962AF_I2C is not set
 # CONFIG_FXLS8962AF_SPI is not set
 # CONFIG_IIO_ST_ACCEL_3AXIS is not set
+# CONFIG_IIO_KX022A_SPI is not set
+# CONFIG_IIO_KX022A_I2C is not set
 # CONFIG_KXSD9 is not set
 # CONFIG_KXCJK1013 is not set
 # CONFIG_MC3230 is not set
@@ -6170,6 +6196,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 #
 # Analog to digital converters
 #
+# CONFIG_AD4130 is not set
 # CONFIG_AD7091R5 is not set
 # CONFIG_AD7124 is not set
 # CONFIG_AD7192 is not set
@@ -6204,6 +6231,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MAX11100 is not set
 # CONFIG_MAX1118 is not set
 # CONFIG_MAX11205 is not set
+# CONFIG_MAX11410 is not set
 # CONFIG_MAX1241 is not set
 # CONFIG_MAX1363 is not set
 # CONFIG_MAX9611 is not set
@@ -6239,6 +6267,7 @@ CONFIG_ROCKCHIP_SARADC=y
 #
 # Analog to digital and digital to analog converters
 #
+# CONFIG_AD74115 is not set
 # CONFIG_AD74413R is not set
 # end of Analog to digital and digital to analog converters
 
@@ -6367,6 +6396,7 @@ CONFIG_ROCKCHIP_SARADC=y
 #
 # CONFIG_ADF4350 is not set
 # CONFIG_ADF4371 is not set
+# CONFIG_ADF4377 is not set
 # CONFIG_ADMV1013 is not set
 # CONFIG_ADMV1014 is not set
 # CONFIG_ADMV4420 is not set
@@ -6617,6 +6647,7 @@ CONFIG_ROCKCHIP_SARADC=y
 # CONFIG_TMP117 is not set
 # CONFIG_TSYS01 is not set
 # CONFIG_TSYS02D is not set
+# CONFIG_MAX30208 is not set
 # CONFIG_MAX31856 is not set
 # CONFIG_MAX31865 is not set
 # end of Temperature sensors
@@ -6900,7 +6931,6 @@ CONFIG_TMPFS_XATTR=y
 # CONFIG_TMPFS_INODE64 is not set
 CONFIG_ARCH_SUPPORTS_HUGETLBFS=y
 # CONFIG_HUGETLBFS is not set
-CONFIG_ARCH_WANT_HUGETLB_PAGE_OPTIMIZE_VMEMMAP=y
 CONFIG_MEMFD_CREATE=y
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 CONFIG_CONFIGFS_FS=y
@@ -6921,9 +6951,11 @@ CONFIG_HFSPLUS_FS=y
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_FILE_CACHE=y
 # CONFIG_SQUASHFS_FILE_DIRECT is not set
-# CONFIG_SQUASHFS_DECOMP_SINGLE is not set
-# CONFIG_SQUASHFS_DECOMP_MULTI is not set
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_SQUASHFS_DECOMP_SINGLE=y
+# CONFIG_SQUASHFS_CHOICE_DECOMP_BY_MOUNT is not set
+CONFIG_SQUASHFS_COMPILE_DECOMP_SINGLE=y
+# CONFIG_SQUASHFS_COMPILE_DECOMP_MULTI is not set
+# CONFIG_SQUASHFS_COMPILE_DECOMP_MULTI_PERCPU is not set
 # CONFIG_SQUASHFS_XATTR is not set
 CONFIG_SQUASHFS_ZLIB=y
 CONFIG_SQUASHFS_LZ4=y
@@ -7147,7 +7179,6 @@ CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
 CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
-CONFIG_CRYPTO_GF128MUL=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_NULL2=y
 # CONFIG_CRYPTO_PCRYPT is not set
@@ -7321,6 +7352,8 @@ CONFIG_CRYPTO_AES_ARM64_BS=y
 CONFIG_CRYPTO_SM4_ARM64_CE_BLK=y
 CONFIG_CRYPTO_SM4_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
+# CONFIG_CRYPTO_SM4_ARM64_CE_CCM is not set
+# CONFIG_CRYPTO_SM4_ARM64_CE_GCM is not set
 # end of Accelerated Cryptographic Algorithms for CPU (arm64)
 
 CONFIG_CRYPTO_HW=y
@@ -7337,6 +7370,7 @@ CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_NITROX_CNN55XX is not set
 # CONFIG_CRYPTO_DEV_CAVIUM_ZIP is not set
 CONFIG_CRYPTO_DEV_ROCKCHIP=m
+CONFIG_CRYPTO_DEV_ROCKCHIP_DEBUG=y
 CONFIG_CRYPTO_DEV_VIRTIO=m
 # CONFIG_CRYPTO_DEV_SAFEXCEL is not set
 # CONFIG_CRYPTO_DEV_CCREE is not set
@@ -7390,6 +7424,7 @@ CONFIG_ARCH_USE_SYM_ANNOTATIONS=y
 CONFIG_CRYPTO_LIB_UTILS=y
 CONFIG_CRYPTO_LIB_AES=y
 CONFIG_CRYPTO_LIB_ARC4=m
+CONFIG_CRYPTO_LIB_GF128MUL=y
 CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
 CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=y
 CONFIG_CRYPTO_LIB_CHACHA_GENERIC=y
@@ -7485,7 +7520,6 @@ CONFIG_CMA_ALIGNMENT=8
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_DMA_MAP_BENCHMARK is not set
 CONFIG_SGL_ALLOC=y
-# CONFIG_FORCE_NR_CPUS is not set
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
 CONFIG_GLOB=y
@@ -7545,7 +7579,8 @@ CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
 # CONFIG_DEBUG_INFO_DWARF4 is not set
 # CONFIG_DEBUG_INFO_DWARF5 is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
-# CONFIG_DEBUG_INFO_COMPRESSED is not set
+CONFIG_DEBUG_INFO_COMPRESSED_NONE=y
+# CONFIG_DEBUG_INFO_COMPRESSED_ZLIB is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_BTF is not set
 # CONFIG_GDB_SCRIPTS is not set
@@ -7705,7 +7740,7 @@ CONFIG_RCU_EXP_CPU_STALL_TIMEOUT=0
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
-CONFIG_HAVE_DYNAMIC_FTRACE_WITH_REGS=y
+CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
